fix: tweaks to search filters on mobile, including heading

--- a/src/components/blocks/search-results/search-results.scss
+++ b/src/components/blocks/search-results/search-results.scss
@@ -2,7 +2,7 @@
     @apply text-xl text-brand-green mb-12 font-bold text-center;
 
     > p {
-        @apply mb-4 leading-none;
+        @apply mb-6 leading-none;
     }
 
     &__count {
